ctsem news:

21/4/2021
#### 3.4.3 ####
- Changed optimization scheme, first BFGS, then stochastic gradient descent.
- Fixed ctStanTIpredEffects function, much faster
- Altered correlation matrix approach -- better optimization / sampling 
  behaviour, priors can differ by index though.

10/2/2021
#### 3.4.2 ####
- ctStanDiscretePars temporal dependence plots work for discrete time also
- Fix: In certain circumstances with covariate effects on duplicated parameters, 
  the effects may not have been completely applied in the last few releases. 
- other small bugfixes and efficiency improvements

4/12/2020
#### 3.4 ####
- ctLOO function for leave one out / k fold cross validation.
- ctCheckFit function dramatically improved for visual model diagnostics.
- Fixes to a range of edge cases when specifying more complex nonlinearities.
- ctStanDiscretePars has improved plotting options.
- ctStanFitUpdate function can be used to attempt to update a saved ctStanFit 
  object to the current version of ctsem.
- ctSaturatedCov function for estimating a form of saturated model as a reference. 
  Still a bit developmental.
- General robustness / efficiency improvements.


10/7/2020
####3.3.8####
- Stationarity,subject specific parameter output, and linear system estimation removed (uses nonlinear in all cases, a bit slower) to try satisfy CRAN compile time checks.

20/6/2020
####3.3.2####
- ctLOO function to compute leave k out entropy estimates for model comparison / validation.
- Optimizer parallelisation for single subject models
- ctStanFitUpdate function to use saved fit objects created in earlier versions of ctsem.
- Multiple core memory usage reductions.

26/4/2020
####3.2.1####
- Minor updates to suit rstan 2.2.3
- Higher dim Hessian really really fixed...

18/4/2020
####3.2.0####
- Change to defaults of ctStanFit -- optimization without priors is new default.
- Optimization with binary variables much improved -- specify using: 
  mymodel$manifesttype <- c(1,0,1) 